--- a/editor-final-2024 v3.html
+++ b/editor-final-2024 v3.html
@@ -412,6 +412,7 @@
           document.getElementById('editor-card').style.display = 'none'; 
              executeCode(); // Call function to update live preview
              updateCssPreview(); // Update preview when opening the editor
+            createHtml();
         }
 
         //คืนค่า editor ส่วนนี้ซับซ้อนนิดนึง
