--- a/editor-final-2024 v3.html
+++ b/editor-final-2024 v3.html
@@ -487,6 +487,7 @@ function changeFontSize(size) {
         // Initialize the preview on page load
         window.onload = function () {
             setTimeout(updatePreview, 1000);
+            createHtml();
         };    
     </script>
 </body>
